@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclWinError.c,v 1.4 2000/09/06 22:37:24 hobbs Exp $
+ * RCS: @(#) $Id: tclWinError.c,v 1.5 2002/05/27 10:14:21 dkf Exp $
  */
 
 #include "tclWinInt.h"
@@ -151,7 +151,7 @@ static char errorTable[] = {
     ECHILD,	/* ERROR_WAIT_NO_CHILDREN	128 */
     ECHILD,	/* ERROR_CHILD_NOT_COMPLETE	129 */
     EBADF,	/* ERROR_DIRECT_ACCESS_HANDLE	130 */
-    EINVAL,	/* 131 */
+    EINVAL,	/* ERROR_NEGATIVE_SEEK		131 */
     ESPIPE,	/* ERROR_SEEK_ON_DEVICE		132 */
     EINVAL,	/* 133 */
     EINVAL,	/* 134 */
